Fixed issue where carousel buttons overlap elements
Left and right carousel DIV’s overlapped and did not allow users to
click on other tabs, etc. Added padding to top and bottom.

--- a/App/www/styling.css
+++ b/App/www/styling.css
@@ -25,6 +25,8 @@
   opacity: 0.2;
   border: none;
   top: -30px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 img{
   padding-top:5px;
